Fix Java 11 warnings.